[metadata]
name = h5ld
version = attr: h5ld.__VERSION__
description = Linked data reader for HDF5 files
long_description = file: README.md
long_description_content_type = text/markdown;charset=UTF-8
author = The HDF Group
author_email = help@hdfgroup.org
keywords =
    hdf5
    rdf
    linked data
    knowledge graph
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Topic :: Utilities
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Atmospheric Science
platforms = any

[options]
python_requires = >=3.7
install_requires =
    h5py>=3.3.0
    rdflib>=5.0.0
zip_safe = False
packages = find:
